# dendrite

./: .gitignore  Cargo.toml  README.md
dendrite/: Cargo.toml
dendrite/src/: analysis.rs  branch.rs  history.rs  lib.rs  predictor.rs  stats.rs  trace.rs
dendrite/src/analysis/: classify.rs  runlength.rs  stats.rs
dendrite/src/predictor/: btb.rs  counter.rs  gshare.rs  pht.rs  simple.rs  table.rs  tage.rs
dendrite/src/predictor/tage/: component.rs  config.rs  stat.rs
dendrite/src/trace/: assembler.rs
dynamorio/: CMakeLists.txt  README.md  build.sh
dynamorio/src/: dendrite.c  dendrite.h
pin/: README.md  dendrite.cpp  makefile.rules
src/: branch.rs  direction.rs  history.rs  lib.rs  predictor.rs  sim.rs  stats.rs  tage.rs  trace.rs
src/predictor/: btb.rs  counter.rs  perceptron.rs  tage.rs
src/predictor/tage/: component.rs  config.rs  stat.rs
src/tage/: component.rs
src/trace/: assembler.rs
